fix sonarqube